src/declarativeimports/core/units.h
@@ -265,6 +265,14 @@ private:
 
     void updateDevicePixelRatio();
     void updateAnimationSpeed();
+
+    /**
+     * @return the best-looking icon scale for the given device pixel ratio
+     * Note that this function is only relevant when using Plasma scaling and
+     * when using Qt scaling, it always returns 1.
+     */
+    static int bestIconScaleForDevicePixelRatio(const int ratio);
+
     /**
      * @return The dpi-adjusted size for a given icon size
      */
